--- a/anti-waste/anti-waste/Base.lproj/LaunchScreen.storyboard
+++ b/anti-waste/anti-waste/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,21 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="smile-big" translatesAutoresizingMaskIntoConstraints="NO" id="0x3-Lx-6P4">
+                                <rect key="frame" x="67" y="275" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="572-zi-wfd"/>
+                                    <constraint firstAttribute="width" constant="240" id="mCI-b3-bnJ"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="0x3-Lx-6P4" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="255" id="AyS-gf-zDl"/>
+                            <constraint firstItem="0x3-Lx-6P4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="TFL-VN-wbZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0x3-Lx-6P4" secondAttribute="trailing" constant="68" id="dtW-sL-tSz"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -26,4 +40,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="smile-big" width="1000" height="1000"/>
+    </resources>
 </document>
