--- a/anti-waste/anti-waste/Base.lproj/Main.storyboard
+++ b/anti-waste/anti-waste/Base.lproj/Main.storyboard
@@ -17,7 +17,21 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cat" translatesAutoresizingMaskIntoConstraints="NO" id="6cL-ay-P5c">
+                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Oah-bW-pAz"/>
+                                    <constraint firstAttribute="width" constant="240" id="QR7-e4-weP"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6cL-ay-P5c" secondAttribute="bottom" constant="270" id="8D2-2c-0Qa"/>
+                            <constraint firstItem="6cL-ay-P5c" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="249" id="Xrf-mh-M1r"/>
+                            <constraint firstItem="6cL-ay-P5c" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="o6O-l2-Vy4"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -25,4 +39,7 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="cat" width="800" height="450"/>
+    </resources>
 </document>
