--- a/anti-waste/anti-waste/Product.storyboard
+++ b/anti-waste/anti-waste/Product.storyboard
@@ -25,8 +25,20 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="green-header" translatesAutoresizingMaskIntoConstraints="NO" id="v4v-TE-JtM">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="78" id="9BV-Rg-rAg"/>
+                                    <constraint firstAttribute="width" constant="375" id="svO-gX-zxg"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="v4v-TE-JtM" firstAttribute="leading" secondItem="4PV-pn-l1k" secondAttribute="leading" id="Pqx-io-hwe"/>
+                            <constraint firstItem="v4v-TE-JtM" firstAttribute="top" secondItem="pue-LF-l8W" secondAttribute="top" id="Yi5-vR-dtS"/>
+                            <constraint firstItem="v4v-TE-JtM" firstAttribute="trailing" secondItem="4PV-pn-l1k" secondAttribute="trailing" id="bBC-Gp-Oby"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="4PV-pn-l1k"/>
                     </view>
                     <connections>
@@ -38,4 +50,7 @@
             <point key="canvasLocation" x="172" y="152.47376311844079"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="green-header" width="375" height="78"/>
+    </resources>
 </document>
