--- a/anti-waste/anti-waste/Product.storyboard
+++ b/anti-waste/anti-waste/Product.storyboard
@@ -25,19 +25,29 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="green-header" translatesAutoresizingMaskIntoConstraints="NO" id="v4v-TE-JtM">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="green-header" translatesAutoresizingMaskIntoConstraints="NO" id="msp-kI-ZMh">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="82"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="78" id="9BV-Rg-rAg"/>
-                                    <constraint firstAttribute="width" constant="375" id="svO-gX-zxg"/>
+                                    <constraint firstAttribute="width" constant="375" id="7UR-4w-fUO"/>
+                                    <constraint firstAttribute="height" constant="82" id="ONL-S2-uuh"/>
                                 </constraints>
                             </imageView>
+                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZrI-Qi-c5r">
+                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <items>
+                                    <tabBarItem title="Accueil" image="home-navbar" id="NjN-Q7-4sz"/>
+                                    <tabBarItem title="Scan" image="scanner-navbar" id="E7n-cI-sMu"/>
+                                    <tabBarItem title="Historique" image="clock-navbar" id="G92-1T-xAF"/>
+                                </items>
+                            </tabBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="v4v-TE-JtM" firstAttribute="leading" secondItem="4PV-pn-l1k" secondAttribute="leading" id="Pqx-io-hwe"/>
-                            <constraint firstItem="v4v-TE-JtM" firstAttribute="top" secondItem="pue-LF-l8W" secondAttribute="top" id="Yi5-vR-dtS"/>
-                            <constraint firstItem="v4v-TE-JtM" firstAttribute="trailing" secondItem="4PV-pn-l1k" secondAttribute="trailing" id="bBC-Gp-Oby"/>
+                            <constraint firstItem="msp-kI-ZMh" firstAttribute="top" secondItem="pue-LF-l8W" secondAttribute="top" id="TuH-GH-r6r"/>
+                            <constraint firstItem="msp-kI-ZMh" firstAttribute="trailing" secondItem="4PV-pn-l1k" secondAttribute="trailing" id="dBf-mf-EhR"/>
+                            <constraint firstItem="msp-kI-ZMh" firstAttribute="leading" secondItem="4PV-pn-l1k" secondAttribute="leading" id="j7o-KY-FLl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4PV-pn-l1k"/>
                     </view>
@@ -51,6 +61,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="green-header" width="375" height="78"/>
+        <image name="clock-navbar" width="30" height="30"/>
+        <image name="green-header" width="375" height="82"/>
+        <image name="home-navbar" width="30" height="30"/>
+        <image name="scanner-navbar" width="30" height="30"/>
     </resources>
 </document>
