--- a/anti-waste/anti-waste/Scanner.storyboard
+++ b/anti-waste/anti-waste/Scanner.storyboard
@@ -13,7 +13,7 @@
         <!--Scanner View Controller-->
         <scene sceneID="Wqb-cN-YTc">
             <objects>
-                <viewController restorationIdentifier="ScannerViewController" storyboardIdentifier="ScannerViewController" id="xnO-Aj-hWe" customClass="ScannerViewController" customModule="anti_waste" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="scannerViewController" id="xnO-Aj-hWe" customClass="ScannerViewController" customModule="anti_waste" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LOH-fM-Ljq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
