--- a/anti-waste/anti-waste/Home.storyboard
+++ b/anti-waste/anti-waste/Home.storyboard
@@ -54,6 +54,9 @@
                                     <constraint firstAttribute="height" constant="30" id="br4-bO-WvU"/>
                                 </constraints>
                                 <state key="normal" image="home-navbar"/>
+                                <connections>
+                                    <action selector="homeButtonAction:" destination="ubc-1Y-6CL" eventType="touchUpInside" id="OBr-jk-LyL"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M0o-7l-ST0">
                                 <rect key="frame" x="172" y="622" width="30" height="30"/>
@@ -62,6 +65,9 @@
                                     <constraint firstAttribute="height" constant="30" id="vog-Tf-a3n"/>
                                 </constraints>
                                 <state key="normal" image="scanner-navbar"/>
+                                <connections>
+                                    <action selector="scanButtonAction:" destination="ubc-1Y-6CL" eventType="touchUpInside" id="Zv7-JD-3dP"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ran-A7-qh4">
                                 <rect key="frame" x="172" y="647" width="30" height="25"/>
